# teamclimber_workspace

./: CMakeLists.txt  README.md  package.xml
include/: image_deal.h  shape_tools.h  shooter_search_armor.h
include/YOLOv11/: YOLOv11.h  common.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/teamclimber_challenge/lib/teamclimber_challenge/: vision_node
install/teamclimber_challenge/share/ament_index/resource_index/parent_prefix_path/: teamclimber_challenge
install/teamclimber_challenge/share/teamclimber_challenge/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/teamclimber_challenge/share/teamclimber_challenge/cmake/: teamclimber_challengeConfig.cmake
launch/: shooter.launch.py  vision.launch.py
log/: latest_build
results/armor_red_1/: climber_results0.json  climber_results0.json.sha256
results/rect/: climber_results0.json  climber_results0.json.sha256
results/sphere/: climber_results0.json  climber_results0.json.sha256
results/stage1/: TEAM4_results1.json  TEAM4_results1.json.sha256
results/stage345/: TEAM4_results3.json  TEAM4_results3.json.sha256  TEAM4_results4.json  TEAM4_results4.json.sha256  TEAM4_results5.json  TEAM4_results5.json.sha256
src/: image_deal.cpp  shape_tools.cpp  shooter_node.cpp  shooter_search_armor.cpp  vision_node.cpp
src/teamclimber_challenge/: CMakeLists.txt
src/teamclimber_challenge/include/: image_deal.h  shape_tools.h
src/teamclimber_challenge/results/: climber_results.json  climber_results.json.sha256
src/teamclimber_challenge/src/: image_deal.cpp  shape_tools.cpp  shooter_node.cpp
src/teamclimber_challenge/src/YOLOv11/: YOLOv11.cpp
